styles.css
.section_title
{
	font-family:"Comic Sans MS";
	text-align:left;
	color:red;

}

div.container
{
	width:100%;
	border: 5px solid #ffffff;
	overflow:auto;
	min-width:615px;
}

div.left
{
	border-color:white; 
	border-style:dashed; 
	width:300px;
	float:left;
}
div.right
{
	border-color:white; 
	border-style:dashed; 
	width:300px;
	float:right;
}

